# llm-stylometry

./: .gitignore  CONTRIBUTING.md  README.md  acl2.tex  acl_latex.tex  check_hf_status.sh  check_remote_status.sh  consolidate_model_results.py  custom.bib  download_model_weights.sh  generate_figures.py  main.tex  pyproject.toml  remote_train.sh  remote_train_hf.sh  requirements-dev.txt  requirements.txt  run_llm_stylometry.sh  run_stats.sh  sync_models.sh  train_hf_models.sh  upload_datasets_to_hf.sh
.github/: PULL_REQUEST_TEMPLATE.md
code/: README.md  all_losses.py  book_stats.py  book_titles.py  check_training_status.py  clean.py  compute_stats.py  confusion_matrix.py  consolidate_model_results.py  constants.py  create_analysis_variants.py  data_utils.py  entropies.py  eval_utils.py  experiment.py  generate_dataset_card.py  generate_figures.py  generate_model_card.py  logging_utils.py  loss_heatmaps.py  main.py  model_utils.py  oz_losses.py  stripplot.py  t_test_figs.py  t_tests.py  tokenizer_utils.py  upload_author_dataset.py
data/: README.md  book_and_chapter_titles.txt  book_stats.csv  book_stats_by_author.csv  model_results_content.pkl  model_results_function.pkl
llm_stylometry/: cli_utils.py
llm_stylometry.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
models/: README.md
notebooks/: figure_1_losses_and_distributions.ipynb  figure_2_statistical_tests.ipynb  figure_3_confusion_matrix.ipynb  figure_4_mds_visualization.ipynb  figure_5_oz_attribution.ipynb
notes/: monitoring_log.txt  test_training_status.md  training_progress_20250930_1706.txt
paper/: README.md  custom.bib  main.tex  supplement.tex
tests/: README.md  check_outputs.py  check_test_model_progress.py  conftest.py  create_comprehensive_test_models.py  create_test_models.py  test_archive_creation.sh  test_classification.py  test_cli.py  test_documentation.py  test_download_weights.sh  test_duplicate_removal.py  test_edge_cases.py  (+14 more)
(+552 files in other folders)
