[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-stylometry"
version = "0.1.0"
description = "A stylometric application of large language models for authorship attribution"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Harrison F. Stropkay" },
    { name = "Jiayi Chen" },
    { name = "Daniel N. Rockmore" },
    { name = "Jeremy R. Manning" }
]
maintainers = [
    { name = "Jeremy R. Manning", email = "jeremy.r.manning@dartmouth.edu" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "torch>=2.2.0",
    "transformers>=4.30.0",
    "numpy>=2.0",
    "scipy>=1.10.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "tqdm>=4.65.0",
    "cleantext>=1.1.4",
    "requests>=2.31.0",
    "plotly>=5.0.0",
    "scikit-learn>=1.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.0.0",
]

[project.urls]
"Homepage" = "https://github.com/ContextLab/llm-stylometry"
"Bug Tracker" = "https://github.com/ContextLab/llm-stylometry/issues"

[tool.setuptools.packages.find]
include = ["llm_stylometry*"]

[tool.black]
line-length = 88
target-version = ['py310']

[tool.ruff]
line-length = 88
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"